samples/_failures_safe/1761499576_672988_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bae213e.c: In function ‘main’:
./samples/SAFE/__tmp_8bae213e.c:160:5: error: expected identifier or ‘(’ at end of input
  160 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_8bae213e.c:160:5: error: expected declaration or statement at end of input
